--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,11 +16,150 @@ html {
 
 body {
   color: #545149;
-  background-color: #f4f1ec;
+  background-color: #ddba82;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
 /*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+* Additional CSS can be defined below or in other CSS files, as per instructions
+*/
+
+main {
+  background-color: #F4F1EC;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 5%;
+}
+
+article {
+  padding: 2.5% 1%;
+  border: solid 0.2em #545149;
+  margin-bottom: 5%;
+}
+
+article:hover {
+  box-shadow: 0.4em 0.4em #ADB8D5;
+}
+article:hover .userHandle {
+  visibility: visible;
+}
+
+article.tweet header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+  margin-bottom: 3%;
+
+}
+
+.userAvatar {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.userHandle {
+  display: flex;
+  justify-content: flex-end;
+  color: silver;
+  align-items: center;
+  visibility: hidden;
+}
+
+#firstName {
+  margin-left: 0.5em;
+}
+
+.tweetContent {
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  font-weight: 300;
+}
+
+article.tweet footer {
+  border-top: solid 0.20em #545149;
+}
+
+.icons {
+  color: #4056A1;
+}
+
+.contentFooter {
+  margin-right: 2.5%;
+  margin-left: 2.5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: small;
+}
+
+article.tweet img {
+  height: 100%;
+  max-width: 100vw;
+}
+
+
+#error-message {
+  border: solid 0.20em red;
+  border-radius: 1em;
+  color: red;
+  margin-bottom: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#scroll-arrow {
+  display: none;
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  color: red;
+  margin-right: 1.5%;
+  margin-bottom: 1.5%;
+}
+
+#scroll-arrow:hover {
+  animation-name: bounce;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes bounce {
+  0% {transform: translateY(0);}
+  50% {transform: translateY(5px);}
+  100% {transform: translateY(0);}
+}
+
+/* Desktop styles width above 1024px */
+
+@media only screen and (min-width: 1024px) {
+
+  body {
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .mainContentContainer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5%;
+  }
+
+  .headerContainer {
+    width: 400px;
+    margin-left: 5%;
+    height: 400px;
+  }
+
+  main {
+    width: 800px;
+  }
+
+}
